# todo_app

./: Pipfile  README.md  database.py  main.py  models.py  pyproject.toml  testdb.db  todos.db  todosapp.db
alembic/: env.py
alembic/versions/: 0af3dd1c1a34_create_phone_number_for_user_column.py
routers/: admin.py  auth.py  edit-user-password.html  todos.py  users.py
templates/: add-todo.html  change-password.html  edit-todo.html  edit-user-password.html  home.html  layout.html  login.html  navbar.html  register.html
test/: test_admin.py  test_auth.py  test_example.py  test_main.py  test_todos.py  test_users.py  utils.py
