[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["hagd <hagd0520@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.0"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pymysql = "^1.1.1"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
